# libs/portal/openapi.json
@@ -551,6 +551,190 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Courses"
+        ],
+        "parameters": [
+          {
+            "name": "uid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommand"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommand"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommand"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommandResult"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommandResult"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommandResult"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Mvc.ProblemDetails"
+                    },
+                    {
+                      "$ref": "#/components/schemas/Microsoft.AspNetCore.Http.HttpValidationProblemDetails"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/ExamPeriods": {
@@ -3063,6 +3247,26 @@
         },
         "additionalProperties": false
       },
+      "PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommand": {
+        "type": "object",
+        "properties": {
+          "uid": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "PastExamsHub.Core.Application.Courses.Commands.Delete.DeleteCourseCommandResult": {
+        "type": "object",
+        "properties": {
+          "uid": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "PastExamsHub.Core.Application.Courses.Commands.Update.UpdateCourseCommand": {
         "type": "object",
         "properties": {
@@ -3119,6 +3323,13 @@
           },
           "courseType": {
             "$ref": "#/components/schemas/PastExamsHub.Core.Domain.Enums.CourseType"
+          },
+          "studyType": {
+            "$ref": "#/components/schemas/PastExamsHub.Core.Domain.Enums.StudyType"
+          },
+          "lecturerUid": {
+            "type": "string",
+            "nullable": true
           },
           "lecturerFirstName": {
             "type": "string",
@@ -3805,39 +4016,48 @@
       "PastExamsHub.Core.Domain.Enums.CourseType": {
         "enum": [
           "Unknown",
-          "Mandatory",
-          "Elective"
+          "Obavezni",
+          "Izborni"
         ],
         "type": "string"
       },
       "PastExamsHub.Core.Domain.Enums.ExamPeriodType": {
         "enum": [
           "Unknown",
-          "January",
+          "Januar",
           "April",
-          "June",
-          "June2",
-          "September",
-          "October",
-          "October2",
-          "December"
+          "Jun",
+          "Jun2",
+          "Septembar",
+          "Oktobar",
+          "Oktobar2",
+          "Decembar"
         ],
         "type": "string"
       },
       "PastExamsHub.Core.Domain.Enums.ExamType": {
         "enum": [
           "Unkwnon",
-          "Written",
-          "Theory",
-          "WrittenAndTheory"
+          "Pismeni",
+          "Usmeni",
+          "PismenoUsmeni"
         ],
         "type": "string"
       },
       "PastExamsHub.Core.Domain.Enums.GenderType": {
         "enum": [
           "Unknown",
-          "Male",
-          "Female"
+          "Musko",
+          "Zensko"
+        ],
+        "type": "string"
+      },
+      "PastExamsHub.Core.Domain.Enums.StudyType": {
+        "enum": [
+          "Unknown",
+          "OsnovneAkademskeStudije",
+          "MasterStudije",
+          "DoktorskeStudije"
         ],
         "type": "string"
       }
